get data.json by relative path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </body>
     <script src="jquery.min.js"></script>
     <script>
-        $.getJSON("http://participa.podemosaragon.info/data.json", function(data) {
+        $.getJSON("data.json", function(data) {
 
             var activeItems = [];
             var acceptedItems = [];
