--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <title>Demo</title>
 </head>
 <body>
+    
+    <h1> La Plaza Pregunta </h1>
+    <p> La plaza pregunta. Cualquier pregunta que alcance un número de puntos equivalente al  0.2% del censo en Aragón (~23 personas) será respondida por el consejo ciudadano (o uno de sus integrantes) en un plazo de 20 días. </p>
+
     <div class="active">
-        <h1> Pendientes </h1>
+        <h2> Pendientes </h2>
     </div>
 
     <div class="accepted">
-        <h1> Aceptadas </h1>
+        <h2> Aceptadas </h2>
     </div>
 
     <div class="responded">
-        <h1> Respondidas </h1>
+        <h2> Respondidas </h2>
     </div>
 
 
