add computation of positive points

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     
-    <button onclick="filename='propuesta-data.json';loadJData(filename)">Propuesta</button> 
-    <button onclick="filename='preguntaapodemos-data.json';loadJData(filename)">Pregunta</button> 
+    <button onclick="filename='PropuestasPrograma.json';loadJData(filename)">Propuesta</button> 
+    <button onclick="filename='LaPlazaPregunta.json';loadJData(filename)">Pregunta</button> 
     <div class="panel">
     <h1> La Plaza Pregunta </h1>
     <p> La plaza pregunta. Cualquier pregunta que alcance un número de puntos equivalente al  0.2% del censo en Aragón (~23 personas) será respondida por el consejo ciudadano (o uno de sus integrantes) en un plazo de 20 días. </p>
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="loadJData.js"></script>
     <script> 
-    filename='propuesta-data.json';
+    filename='PropuestasPrograma.json';
     loadJData(filename) 
     </script>
 </body>
